# Openenv-hackathon

./: .dockerignore  .gitignore  Dockerfile  README.md  baseline.py  inference.py  requirements.txt  results.md  test_grader_bounds.py  validate-submission.sh
.github/workflows/: keepalive.yml
envs/: __init__.py
envs/soc_triage_env/: Dockerfile  README.md  __init__.py  baseline.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
envs/soc_triage_env/server/: Dockerfile  app.py  graders.py  requirements.txt  soc_triage_env.py  tasks.py
envs/soc_triage_env/server/data/: alerts.json
