[project]
name = "soc-triage-env"
version = "0.1.0"
description = "Cybersecurity SOC Analyst Triage Environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
authors = [
  { name = "Vasanth Adithya Mundrathi", email = "vasanthfeb13@gmail.com" }
]
dependencies = [
  "openenv-core[core]>=0.2.2",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "pydantic>=2.0.0",
  "scipy>=1.12.0",
  "openai>=1.12.0",
  "requests>=2.31.0"
]

[project.scripts]
server = "soc_triage_env.server.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["soc_triage_env", "soc_triage_env.server", "soc_triage_env.server.data"]

[tool.setuptools.package-dir]
soc_triage_env = "."
"soc_triage_env.server" = "server"
"soc_triage_env.server.data" = "server/data"

[tool.setuptools.package-data]
"soc_triage_env.server" = ["data/*.json"]
